--- a/inst/www/header.html
+++ b/inst/www/header.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="header_styles.css" />
   </head>
   <!--Brand Bar -->
   <div class="row__outer row__outer--brand-bar">
@@ -68,3 +68,4 @@
     </header>
   </div>
 </html>
+
