--- a/inst/www/footer.html
+++ b/inst/www/footer.html
@@ -24,7 +24,7 @@
         <div class="footer-bar__links">
             <ul class="footer-bar__social-links">
                 <li class="footer-bar__social-link-item">
-                    <a href="https://www.un.org/en/sections/about-website/un-social-media/index.html" target="_blank">Join the conversation:</a>
+                    <a href="https://www.un.org/en/sections/about-website/un-social-media/index.html" target="_blank"><span class='i18n' data-key="Join The Conversation:">Join the conversation:</span></a>
                 </li>
                     <li class="footer-bar__social-link-item facebook">
                         <a href="https://www.facebook.com/unitednations" target="_blank">
@@ -125,7 +125,7 @@
                     </li>
             </ul>
             <div>
-                <a href="https://www.un.org/en/about-us/how-to-donate-to-the-un-system" class="footer-bar_button k-button" kendobutton="" role="button"  data-title="" target="_blank">Donate</a>
+                <a href="https://www.un.org/en/about-us/how-to-donate-to-the-un-system" class="footer-bar_button k-button" kendobutton="" role="button"  data-title="" target="_blank"><span class="i18n" data-key="Donate">Donate</span></a>
             </div>
         </div>
 
@@ -136,12 +136,12 @@
     <footer class="row__inner row__inner--footer-bar">
          <ul class="footer-bar__links">
             <!-- <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/contactus/">Contact</a></li> -->
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/contact-us/">Contact</a></li>
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/copyright/">Copyright </a></li>
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/fraudalert/">Fraud Alert</a></li>
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/privacy/">Privacy Notice</a></li>
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/siteindex/">Site Index</a></li>
-            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/terms/">Terms of Use</a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/contact-us/"><span class="i18n" data-key="Contact">Contact</span></a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/copyright/"><span class="i18n" data-key="Copyright">Copyright</span></a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/fraudalert/"><span class="i18n" data-key="Fraud Alert">Fraud Alert</span></a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/privacy/"><span class="i18n" data-key="Privacy Notice">Privacy Notice</span></a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/siteindex/"><span class="i18n" data-key="Site Index">Site Index</span></a></li>
+            <li class="footer-bar__link-item"><a class="footer-bar__link" href="//www.un.org/en/aboutun/terms/"><span class="i18n" data-key="Terms of Use">Terms of Use</span></a></li>
         </ul>
     </footer>
 </div>
